# ED22-01-Amaya-Trujillo

./: README.md
docs/: BITACORA.md  README.md  VIDEOEXPLICADO.md  Video Explicado  Video Explicado.md
docs/images/: README.md
src/Ej_opencv/: CMakeLists.txt  Detector.cpp  Detector.hpp  ListaArbol.cpp  ListaArbol.hpp  ListaPersonas.cpp  ListaPersonas.hpp  Nodo.cpp  Nodo.hpp  NodoA.cpp  NodoA.hpp  Persona.cpp  Persona.hpp  Requerimientos.cpp  Requerimientos.hpp  main.cpp
src/Ej_opencv/src/logic/: ListaPersonas.cpp  Node.cpp
src/Ej_opencv/src/logic/includes/: ListaPersonas.h  Nodo.h
